--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-
   <main>
+    <h1 class="sr-only">Business Insights</h1>
     <section class="card">
       <div class="card__image">
         <div class="overlay"></div>
@@ -43,11 +43,6 @@
       </div>
     </section>
   </main>
-
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 
 </html>
