Removed Hover State & Capitalization On Texts

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
             experience, and overall efficiency.</p>
         </div>
         <div class="card__content-stat">
-          <div class="stat"><p><span>10k+</span>COMPANIES
+          <div class="stat"><p><span>10k+</span>companies
           </p></div>
-          <div class="stat"><p><span>314</span>TEMPLATES
+          <div class="stat"><p><span>314</span>templates
           </p></div>
-          <div class="stat"><p><span>12M+</span>QUERIES
+          <div class="stat"><p><span>12M+</span>queries
           </p></div>
         </div>
       </div>
